syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.luradata.bookservice.proto";

package user;

// User service definition
service UserService {
  // Get user by ID
  rpc GetUser (GetUserRequest) returns (UserResponse) {}
  
  // Create new user
  rpc CreateUser (CreateUserRequest) returns (UserResponse) {}
  
  // Update user
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {}
  
  // Delete user
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
}

// Request message for getting a user
message GetUserRequest {
  int64 user_id = 1;
}

// Request message for creating a user
message CreateUserRequest {
  string username = 1;
  string email = 2;
  string full_name = 3;
}

// Request message for updating a user
message UpdateUserRequest {
  int64 user_id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
}

// Request message for deleting a user
message DeleteUserRequest {
  int64 user_id = 1;
}

// Response message for user operations
message UserResponse {
  int64 user_id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string created_at = 5;
  string updated_at = 6;
}

// Response message for delete operation
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
} 